[project]
name = "qwen3_span_extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "ninja>=1.11.1.4",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "plotly>=6.1.2",
    "pymupdf4llm>=0.0.24",
    "ruff>=0.11.12",
    "torchvision>=0.22.1",
    "transformers<4.53",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
anims = [
    "manim==0.19.0"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
